# cad-open-layer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  fuzz.yml  property-tests.yml
crates/cad-core/: Cargo.toml
crates/cad-core/src/: entity.rs  error.rs  geom.rs  lib.rs  transform.rs  units.rs
crates/cad-dxf-parser/: Cargo.toml
crates/cad-dxf-parser/src/: builders.rs  lib.rs  parser.rs  reader.rs
crates/cad-dxf-parser/tests/: parse_medium_multifamily.rs  parse_small_floorplan.rs  parse_warnings.rs
crates/cad-dxf-writer/: Cargo.toml
crates/cad-dxf-writer/src/: entity_emit.rs  layer.rs  lib.rs
crates/cad-dxf-writer/tests/: writer_parser_roundtrip.rs
crates/cad-extract/: Cargo.toml
crates/cad-extract/src/: dimension.rs  grid.rs  lib.rs  opening.rs  probe.rs  room.rs  wall.rs
crates/cad-extract/tests/: extract_medium_multifamily.rs  full_pipeline_small_floorplan.rs  opening_extraction_small_floorplan.rs  room_extraction_small_floorplan.rs  wall_extraction_small_floorplan.rs  wall_hierarchy_classification.rs
crates/cad-geometry/: Cargo.toml
crates/cad-geometry/src/: dcel.rs  lib.rs  polygon.rs  polyline.rs  spatial.rs
crates/cad-maket-adapter/: Cargo.toml
crates/cad-maket-adapter/src/: lib.rs
crates/cad-mcp/: Cargo.toml
crates/cad-mcp/src/: lib.rs  main.rs
crates/cad-semantic/: Cargo.toml
crates/cad-semantic/src/: equivalence.rs  lib.rs
crates/cad-synthesize/: Cargo.toml
crates/cad-synthesize/src/: blocks.rs  lib.rs  synthesis.rs
crates/cad-synthesize/tests/: synthesize_layer_preservation.rs  synthesize_medium_roundtrip.rs  synthesize_roundtrip.rs
crates/cad-wasm/: Cargo.toml
crates/cad-wasm/src/: lib.rs
docs/: README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_dxf.rs  parse_dxf_then_extract.rs
legal-package/: 01-clean-room-policy.md  02-reference-material-log.md  03-no-gpl-contamination-policy.md  04-contributor-declaration-template.md  05-trademark-usage-guideline.md  06-test-corpus-license-log.md  07-oda-contact-log.md  08-counsel-ratification-letter.md  INDEX.md
legal-package/contributors/: hakki.md
scripts/: README.md  check_corpus_log_consistency.sh  scan_gpl_signatures.sh  verify_contributors.sh
tests/: README.md
tests/corpus/golden/: README.md  medium_multifamily_floorplan_synthetic_r2000.golden.json  small_floorplan_simple_r2000.golden.json
tests/corpus/synthetic/: medium_multifamily_floorplan_synthetic_r2000.dxf  small_floorplan_simple_r2000.dxf
web/: .gitignore  README.md  index.html  playground.html  serve.py
web/assets/: style.css
