[workspace]
resolver = "2"
members = [
    "crates/cad-core",
    "crates/cad-dxf-parser",
    "crates/cad-dxf-writer",
    "crates/cad-geometry",
    "crates/cad-semantic",
    "crates/cad-extract",
    "crates/cad-synthesize",
    "crates/cad-maket-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cad-open-layer/cad-open-layer"
homepage = "https://cadopenlayer.dev"
authors = ["hakki <shgkrrl0924@gmail.com>"]
keywords = ["cad", "dxf", "drawing", "interoperability"]
categories = ["parser-implementations", "data-structures"]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
slotmap = "1.0"
rstar = "0.12"
hashbrown = "0.14"

# Numerics
ordered-float = "4.2"

# Serialization (golden tests + Maket adapter)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.5"
insta = { version = "1.41", features = ["json", "yaml"] }
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Internal crates
cad-core = { path = "crates/cad-core", version = "0.1.0" }
cad-dxf-parser = { path = "crates/cad-dxf-parser", version = "0.1.0" }
cad-dxf-writer = { path = "crates/cad-dxf-writer", version = "0.1.0" }
cad-geometry = { path = "crates/cad-geometry", version = "0.1.0" }
cad-semantic = { path = "crates/cad-semantic", version = "0.1.0" }
cad-extract = { path = "crates/cad-extract", version = "0.1.0" }
cad-synthesize = { path = "crates/cad-synthesize", version = "0.1.0" }
cad-maket-adapter = { path = "crates/cad-maket-adapter", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# 자주 발생하는 false positive 끄기
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
