[package]
name = "cad-core"
description = "Common types, errors, units, and transforms for CAD Open Layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
ordered-float = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:ordered-float"]

[lints]
workspace = true
