[package]
name = "cad-dxf-writer"
description = "DXF file emitter. Layer 1 of CAD Open Layer (write side)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cad-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
cad-dxf-parser.workspace = true

[lints]
workspace = true
