[package]
name = "cad-semantic"
description = "Architectural semantic data model. Layer 3 of CAD Open Layer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cad-core.workspace = true
cad-geometry.workspace = true
serde = { workspace = true, optional = true }
ordered-float = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:ordered-float", "cad-core/serde"]

[lints]
workspace = true
